# LMECA2300-seminar

./: .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  SPH.c  SPH.h  cmake_install.cmake  kernel.c  kernel.h  main.c  print_particules.c
Make_movie/: 1_convert_to_jpg_script.sh  2_rename_script.sh  3_convert_to_movie_script.sh  README.txt
doc/: COMPILING.html  COMPILING.md  terminal_tutorial.html  tutorial.html  tutorial.md
results/Circle/: results  results_file
results/Circle/CSPM/: circle_100  circle_500
results/Circle/MLS/: circle_10  circle_100  circle_500
results/Circle/no_correction/: circle_100  circle_500  circle_700
results/dam_break/: results_file
results/dam_break/MLS/: dambreak_1000  dambreak_1500  dambreak_1900  dambreak_500
results/dam_break/no_correction/: dambreak_1000  dambreak_1500  dambreak_500
shaders/: particles_frag.glsl
src/: Particule.c  Particule.h  README_MAC_USERS.md  SPH.c  SPH.h  animation.c  boundary.c  boundary.h  character_table.c  checkDerivatives.c  checkDerivatives.h  consistency.c  consistency.h  derivatives.c  derivatives.h  inputs.c  inputs.h  kernel.c  kernel.h  main.c  main_for_mac.c  main_with_drawing.c  neighborhood_search.c  neighborhood_search.h  neighborhood_search_for_mac.c  neighborhood_search_for_mac.h  particle.c  particle.h  points_and_lines.c  print_particules.c  print_particules.h  text_style.c  utils.c  utils.h  visualization.c
src-david/: checkDerivatives.c  kernel.h  main.c  visualization.c  visualization.h
